--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 			<div class="row"><p></p></div>
 			<div class="row">
 				<div class="col-md-12">
+					Demo Station: <select class="selectpicker" id="station-select"></select>
+				</div>
+			</div>
+			<div class="row"><p></p></div>
+			<div class="row">
+				<div class="col-md-12">
 					Service: <select class="selectpicker" id="service-select"></select>
 					Payload: <select class="selectpicker" id="payload-select"></select>
 					<button class="btn btn-primary" id="send-button">Send Event</button>
