--- a/demo-1.html
+++ b/demo-1.html
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					Demo Station: <select class="selectpicker" id="station-select">
-					<option value="02 Demo (Eric)" selected="">02 Demo (Eric)</option>
+					<option value="01 Demo (Ken)" selected="">01 Demo (Ken)</option>
 					</select>
 				</div>
 			</div>
